adjusted values from Netpbm images as if they were linear, which
produced incorrect and rather terrible results.  Netpbm 10.20 brought
the pm_[un]gamma709() library routines and pnm_readpamrown() etc.  for
manipulating Netpbm images in floating point 0..1 sample values, both
linear and gamma-adjusted.


CHANGE HISTORY 
--------------

not yet  BJH  Release 10.36

              libnetpbm: fix rgb:r/g/b color name parsing for invalid
              syntax.

06.08.19 BJH  Release 10.35

              Add pgmdeshadow.

              giftopnm: add -quitearly.

              pamfile: add -comments.

              ppmdraw: remove limitation on size of script.

              pnm_readpaminit(), pnm_writepaminit(): Add comment control.

              ppmtogif: do one row at a time.

              Pnmtopng: improve validation of -modtime option.

              Look in /usr/share/X11 instead of /usr/openwin/lib for
              rgb.txt.

              ppmtompeg: die properly when frame is less than 16x16.

              ppmdraw: fix bug with semicolon in script not followed by
              white space.

              libppmd (ppmdraw, ppmlabel): don't crash with horizontal
              or vertical line that is entirely out of frame.

              picttoppm: Fix 32 bit per pixel conversion, broken in 10.34.

              pamthreshold: fix read from pipe.

              Fix typo in make file that makes svgtopam get built
              when Libxml2 is not available.

              pnm_computetuplefreqhash(), pnm_computetuplefreqtable2():
              Don't crash on error without pm_setjmp().

              Change memmem() to memmem_internal() in cameratopam/identify.c
              to avoid collision with system library.

              Use __MINGW32__ to determine HAVE_MKSTEMP (instead of manual).

              Eliminate use of network functions for endianness computations.

              Use "inttypes_netpbm.h" on a system that doesn't have